core/src/main/antlr4/org/clnlang/parser/.antlr/clnParser.java
// Generated from /home/gszabo/Projects/Else/clean/core/src/main/antlr4/org/clnlang/parser/cln.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class clnParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PACKAGE=1, IMPORT=2, EXPOSE=3, STRUCT=4, UNION=5, VAR=6, IF=7, ELSE=8, 
		WHILE=9, SWITCH=10, CASE=11, DEFAULT=12, RETURN=13, INT_T=14, BOOL_T=15, 
		STRING_T=16, DEC_T=17, ANY_STRUCT=18, BOOL_LIT=19, INT_LIT=20, DEC_LIT=21, 
		STRING_LIT=22, LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, LBRACK=27, 
		RBRACK=28, SEMI=29, COMMA=30, COLON=31, DOT=32, ASSIGN=33, PLUS=34, MINUS=35, 
		STAR=36, SLASH=37, PERCENT=38, INC=39, DEC=40, NOT=41, AND=42, OR=43, 
		EQ=44, NEQ=45, LT=46, LTE=47, GT=48, GTE=49, ID=50, LINE_COMMENT=51, BLOCK_COMMENT=52, 
		WS=53;
	public static final int
		RULE_program = 0, RULE_topLevelDecl = 1, RULE_packageDecl = 2, RULE_importDecl = 3, 
		RULE_decl = 4, RULE_globalVarDecl = 5, RULE_type = 6, RULE_baseType = 7, 
		RULE_primitiveType = 8, RULE_decimalType = 9, RULE_structDecl = 10, RULE_structFieldDecl = 11, 
		RULE_unionDecl = 12, RULE_unionMember = 13, RULE_functionDecl = 14, RULE_returnType = 15, 
		RULE_namedReturnSig = 16, RULE_returnVar = 17, RULE_paramList = 18, RULE_param = 19, 
		RULE_block = 20, RULE_stmt = 21, RULE_varDeclStmt = 22, RULE_varBinding = 23, 
		RULE_assignStmt = 24, RULE_tupleAssignStmt = 25, RULE_tupleBind = 26, 
		RULE_lvalue = 27, RULE_lvalueSuffix = 28, RULE_ifStmt = 29, RULE_whileStmt = 30, 
		RULE_switchStmt = 31, RULE_caseClause = 32, RULE_returnStmt = 33, RULE_exprStmt = 34, 
		RULE_expr = 35, RULE_orExpr = 36, RULE_andExpr = 37, RULE_equalityExpr = 38, 
		RULE_relExpr = 39, RULE_addExpr = 40, RULE_mulExpr = 41, RULE_unaryExpr = 42, 
		RULE_postfixExpr = 43, RULE_postfixOp = 44, RULE_argList = 45, RULE_primaryExpr = 46, 
		RULE_arrayLiteral = 47, RULE_structLiteral = 48, RULE_fieldInitList = 49, 
		RULE_fieldInit = 50, RULE_exprList = 51, RULE_qualifiedName = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topLevelDecl", "packageDecl", "importDecl", "decl", "globalVarDecl", 
			"type", "baseType", "primitiveType", "decimalType", "structDecl", "structFieldDecl", 
			"unionDecl", "unionMember", "functionDecl", "returnType", "namedReturnSig", 
			"returnVar", "paramList", "param", "block", "stmt", "varDeclStmt", "varBinding", 
			"assignStmt", "tupleAssignStmt", "tupleBind", "lvalue", "lvalueSuffix", 
			"ifStmt", "whileStmt", "switchStmt", "caseClause", "returnStmt", "exprStmt", 
			"expr", "orExpr", "andExpr", "equalityExpr", "relExpr", "addExpr", "mulExpr", 
			"unaryExpr", "postfixExpr", "postfixOp", "argList", "primaryExpr", "arrayLiteral", 
			"structLiteral", "fieldInitList", "fieldInit", "exprList", "qualifiedName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "'import'", "'expose'", "'struct'", "'union'", "'var'", 
			"'if'", "'else'", "'while'", "'switch'", "'case'", "'default'", "'return'", 
			"'int'", "'bool'", "'string'", "'dec'", "'AnyStruct'", null, null, null, 
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "':'", 
			"'.'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'!'", 
			"'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PACKAGE", "IMPORT", "EXPOSE", "STRUCT", "UNION", "VAR", "IF", 
			"ELSE", "WHILE", "SWITCH", "CASE", "DEFAULT", "RETURN", "INT_T", "BOOL_T", 
			"STRING_T", "DEC_T", "ANY_STRUCT", "BOOL_LIT", "INT_LIT", "DEC_LIT", 
			"STRING_LIT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
			"SEMI", "COMMA", "COLON", "DOT", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", 
			"PERCENT", "INC", "DEC", "NOT", "AND", "OR", "EQ", "NEQ", "LT", "LTE", 
			"GT", "GTE", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cln.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public clnParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(clnParser.EOF, 0); }
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125899915739262L) != 0)) {
				{
				{
				setState(106);
				topLevelDecl();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public PackageDeclContext packageDecl() {
			return getRuleContext(PackageDeclContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelDecl);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PACKAGE:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				packageDecl();
				}
				break;
			case IMPORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				importDecl();
				}
				break;
			case EXPOSE:
			case STRUCT:
			case UNION:
			case VAR:
			case INT_T:
			case BOOL_T:
			case STRING_T:
			case DEC_T:
			case ANY_STRUCT:
			case LPAREN:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(clnParser.PACKAGE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public PackageDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDecl; }
	}

	public final PackageDeclContext packageDecl() throws RecognitionException {
		PackageDeclContext _localctx = new PackageDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(PACKAGE);
			setState(120);
			qualifiedName();
			setState(121);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(clnParser.IMPORT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public TerminalNode DOT() { return getToken(clnParser.DOT, 0); }
		public TerminalNode STAR() { return getToken(clnParser.STAR, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(IMPORT);
			setState(124);
			qualifiedName();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(125);
				match(DOT);
				setState(126);
				match(STAR);
				}
			}

			setState(129);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public StructDeclContext structDecl() {
			return getRuleContext(StructDeclContext.class,0);
		}
		public UnionDeclContext unionDecl() {
			return getRuleContext(UnionDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public GlobalVarDeclContext globalVarDecl() {
			return getRuleContext(GlobalVarDeclContext.class,0);
		}
		public TerminalNode EXPOSE() { return getToken(clnParser.EXPOSE, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPOSE) {
				{
				setState(131);
				match(EXPOSE);
				}
			}

			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(134);
				structDecl();
				}
				break;
			case 2:
				{
				setState(135);
				unionDecl();
				}
				break;
			case 3:
				{
				setState(136);
				functionDecl();
				}
				break;
			case 4:
				{
				setState(137);
				globalVarDecl();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVarDeclContext extends ParserRuleContext {
		public VarBindingContext varBinding() {
			return getRuleContext(VarBindingContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public GlobalVarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVarDecl; }
	}

	public final GlobalVarDeclContext globalVarDecl() throws RecognitionException {
		GlobalVarDeclContext _localctx = new GlobalVarDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_globalVarDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			varBinding();
			setState(141);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public BaseTypeContext baseType() {
			return getRuleContext(BaseTypeContext.class,0);
		}
		public List<TerminalNode> LBRACK() { return getTokens(clnParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(clnParser.LBRACK, i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(clnParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(clnParser.RBRACK, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			baseType();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACK) {
				{
				{
				setState(144);
				match(LBRACK);
				setState(145);
				match(RBRACK);
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BaseTypeContext extends ParserRuleContext {
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TerminalNode ANY_STRUCT() { return getToken(clnParser.ANY_STRUCT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public BaseTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseType; }
	}

	public final BaseTypeContext baseType() throws RecognitionException {
		BaseTypeContext _localctx = new BaseTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_baseType);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_T:
			case BOOL_T:
			case STRING_T:
			case DEC_T:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				primitiveType();
				}
				break;
			case ANY_STRUCT:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				match(ANY_STRUCT);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				qualifiedName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimitiveTypeContext extends ParserRuleContext {
		public TerminalNode INT_T() { return getToken(clnParser.INT_T, 0); }
		public TerminalNode BOOL_T() { return getToken(clnParser.BOOL_T, 0); }
		public TerminalNode STRING_T() { return getToken(clnParser.STRING_T, 0); }
		public DecimalTypeContext decimalType() {
			return getRuleContext(DecimalTypeContext.class,0);
		}
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveType; }
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_primitiveType);
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_T:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				match(INT_T);
				}
				break;
			case BOOL_T:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				match(BOOL_T);
				}
				break;
			case STRING_T:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				match(STRING_T);
				}
				break;
			case DEC_T:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				decimalType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecimalTypeContext extends ParserRuleContext {
		public TerminalNode DEC_T() { return getToken(clnParser.DEC_T, 0); }
		public TerminalNode LPAREN() { return getToken(clnParser.LPAREN, 0); }
		public TerminalNode INT_LIT() { return getToken(clnParser.INT_LIT, 0); }
		public TerminalNode RPAREN() { return getToken(clnParser.RPAREN, 0); }
		public TerminalNode COMMA() { return getToken(clnParser.COMMA, 0); }
		public TerminalNode ID() { return getToken(clnParser.ID, 0); }
		public DecimalTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decimalType; }
	}

	public final DecimalTypeContext decimalType() throws RecognitionException {
		DecimalTypeContext _localctx = new DecimalTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_decimalType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(DEC_T);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(163);
				match(LPAREN);
				setState(164);
				match(INT_LIT);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(165);
					match(COMMA);
					setState(166);
					match(ID);
					}
				}

				setState(169);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDeclContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(clnParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(clnParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(clnParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(clnParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public List<StructFieldDeclContext> structFieldDecl() {
			return getRuleContexts(StructFieldDeclContext.class);
		}
		public StructFieldDeclContext structFieldDecl(int i) {
			return getRuleContext(StructFieldDeclContext.class,i);
		}
		public StructDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDecl; }
	}

	public final StructDeclContext structDecl() throws RecognitionException {
		StructDeclContext _localctx = new StructDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_structDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(STRUCT);
			setState(173);
			match(ID);
			setState(174);
			match(LBRACE);
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125899907350592L) != 0)) {
				{
				{
				setState(175);
				structFieldDecl();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			match(RBRACE);
			setState(182);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructFieldDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(clnParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public TerminalNode VAR() { return getToken(clnParser.VAR, 0); }
		public StructFieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structFieldDecl; }
	}

	public final StructFieldDeclContext structFieldDecl() throws RecognitionException {
		StructFieldDeclContext _localctx = new StructFieldDeclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_structFieldDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(184);
				match(VAR);
				}
			}

			setState(187);
			type();
			setState(188);
			match(ID);
			setState(189);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnionDeclContext extends ParserRuleContext {
		public TerminalNode UNION() { return getToken(clnParser.UNION, 0); }
		public TerminalNode ID() { return getToken(clnParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(clnParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(clnParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public List<UnionMemberContext> unionMember() {
			return getRuleContexts(UnionMemberContext.class);
		}
		public UnionMemberContext unionMember(int i) {
			return getRuleContext(UnionMemberContext.class,i);
		}
		public UnionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unionDecl; }
	}

	public final UnionDeclContext unionDecl() throws RecognitionException {
		UnionDeclContext _localctx = new UnionDeclContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_unionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(UNION);
			setState(192);
			match(ID);
			setState(193);
			match(LBRACE);
			setState(195); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(194);
				unionMember();
				}
				}
				setState(197); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(199);
			match(RBRACE);
			setState(200);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnionMemberContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(clnParser.SEMI, 0); }
		public UnionMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unionMember; }
	}
